; ModuleID = '/home/carl/AnghaBench/Craft/src/extr_cube.c_make_character_3d.c'
source_filename = "/home/carl/AnghaBench/Craft/src/extr_cube.c_make_character_3d.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@make_character_3d.positions = internal constant [8 x [6 x [3 x float]]] [[6 x [3 x float]] [[3 x float] [float 0.000000e+00, float -2.000000e+00, float -1.000000e+00], [3 x float] [float 0.000000e+00, float 2.000000e+00, float 1.000000e+00], [3 x float] [float 0.000000e+00, float 2.000000e+00, float -1.000000e+00], [3 x float] [float 0.000000e+00, float -2.000000e+00, float -1.000000e+00], [3 x float] [float 0.000000e+00, float -2.000000e+00, float 1.000000e+00], [3 x float] [float 0.000000e+00, float 2.000000e+00, float 1.000000e+00]], [6 x [3 x float]] [[3 x float] [float 0.000000e+00, float -2.000000e+00, float -1.000000e+00], [3 x float] [float 0.000000e+00, float 2.000000e+00, float 1.000000e+00], [3 x float] [float 0.000000e+00, float -2.000000e+00, float 1.000000e+00], [3 x float] [float 0.000000e+00, float -2.000000e+00, float -1.000000e+00], [3 x float] [float 0.000000e+00, float 2.000000e+00, float -1.000000e+00], [3 x float] [float 0.000000e+00, float 2.000000e+00, float 1.000000e+00]], [6 x [3 x float]] [[3 x float] [float -1.000000e+00, float -2.000000e+00, float 0.000000e+00], [3 x float] [float 1.000000e+00, float 2.000000e+00, float 0.000000e+00], [3 x float] [float 1.000000e+00, float -2.000000e+00, float 0.000000e+00], [3 x float] [float -1.000000e+00, float -2.000000e+00, float 0.000000e+00], [3 x float] [float -1.000000e+00, float 2.000000e+00, float 0.000000e+00], [3 x float] [float 1.000000e+00, float 2.000000e+00, float 0.000000e+00]], [6 x [3 x float]] [[3 x float] [float -1.000000e+00, float -2.000000e+00, float 0.000000e+00], [3 x float] [float 1.000000e+00, float -2.000000e+00, float 0.000000e+00], [3 x float] [float 1.000000e+00, float 2.000000e+00, float 0.000000e+00], [3 x float] [float -1.000000e+00, float -2.000000e+00, float 0.000000e+00], [3 x float] [float 1.000000e+00, float 2.000000e+00, float 0.000000e+00], [3 x float] [float -1.000000e+00, float 2.000000e+00, float 0.000000e+00]], [6 x [3 x float]] [[3 x float] [float -1.000000e+00, float 0.000000e+00, float 2.000000e+00], [3 x float] [float 1.000000e+00, float 0.000000e+00, float 2.000000e+00], [3 x float] [float 1.000000e+00, float 0.000000e+00, float -2.000000e+00], [3 x float] [float -1.000000e+00, float 0.000000e+00, float 2.000000e+00], [3 x float] [float 1.000000e+00, float 0.000000e+00, float -2.000000e+00], [3 x float] [float -1.000000e+00, float 0.000000e+00, float -2.000000e+00]], [6 x [3 x float]] [[3 x float] [float -2.000000e+00, float 0.000000e+00, float 1.000000e+00], [3 x float] [float 2.000000e+00, float 0.000000e+00, float -1.000000e+00], [3 x float] [float -2.000000e+00, float 0.000000e+00, float -1.000000e+00], [3 x float] [float -2.000000e+00, float 0.000000e+00, float 1.000000e+00], [3 x float] [float 2.000000e+00, float 0.000000e+00, float 1.000000e+00], [3 x float] [float 2.000000e+00, float 0.000000e+00, float -1.000000e+00]], [6 x [3 x float]] [[3 x float] [float 1.000000e+00, float 0.000000e+00, float 2.000000e+00], [3 x float] [float -1.000000e+00, float 0.000000e+00, float -2.000000e+00], [3 x float] [float -1.000000e+00, float 0.000000e+00, float 2.000000e+00], [3 x float] [float 1.000000e+00, float 0.000000e+00, float 2.000000e+00], [3 x float] [float 1.000000e+00, float 0.000000e+00, float -2.000000e+00], [3 x float] [float -1.000000e+00, float 0.000000e+00, float -2.000000e+00]], [6 x [3 x float]] [[3 x float] [float 2.000000e+00, float 0.000000e+00, float -1.000000e+00], [3 x float] [float -2.000000e+00, float 0.000000e+00, float 1.000000e+00], [3 x float] [float 2.000000e+00, float 0.000000e+00, float 1.000000e+00], [3 x float] [float 2.000000e+00, float 0.000000e+00, float -1.000000e+00], [3 x float] [float -2.000000e+00, float 0.000000e+00, float -1.000000e+00], [3 x float] [float -2.000000e+00, float 0.000000e+00, float 1.000000e+00]]], align 16
@make_character_3d.uvs = internal constant [8 x [6 x [2 x float]]] [[6 x [2 x float]] [[2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00], [2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 1.000000e+00, float 1.000000e+00]], [6 x [2 x float]] [[2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00], [2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00]], [6 x [2 x float]] [[2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00], [2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00]], [6 x [2 x float]] [[2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00]], [6 x [2 x float]] [[2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00]], [6 x [2 x float]] [[2 x float] [float 0.000000e+00, float 1.000000e+00], [2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00], [2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 0.000000e+00]], [6 x [2 x float]] [[2 x float] [float 0.000000e+00, float 1.000000e+00], [2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00], [2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 0.000000e+00]], [6 x [2 x float]] [[2 x float] [float 0.000000e+00, float 1.000000e+00], [2 x float] [float 1.000000e+00, float 0.000000e+00], [2 x float] [float 1.000000e+00, float 1.000000e+00], [2 x float] [float 0.000000e+00, float 1.000000e+00], [2 x float] zeroinitializer, [2 x float] [float 1.000000e+00, float 0.000000e+00]]], align 16
@make_character_3d.offsets = internal constant [8 x [3 x float]] [[3 x float] [float -1.000000e+00, float 0.000000e+00, float 0.000000e+00], [3 x float] [float 1.000000e+00, float 0.000000e+00, float 0.000000e+00], [3 x float] [float 0.000000e+00, float 0.000000e+00, float -1.000000e+00], [3 x float] [float 0.000000e+00, float 0.000000e+00, float 1.000000e+00], [3 x float] [float 0.000000e+00, float 1.000000e+00, float 0.000000e+00], [3 x float] [float 0.000000e+00, float 1.000000e+00, float 0.000000e+00], [3 x float] [float 0.000000e+00, float 1.000000e+00, float 0.000000e+00], [3 x float] [float 0.000000e+00, float 1.000000e+00, float 0.000000e+00]], align 16

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @make_character_3d(float* %0, float %1, float %2, float %3, float %4, i32 %5, i8 signext %6) #0 {
  %8 = alloca float*, align 8
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  %11 = alloca float, align 4
  %12 = alloca float, align 4
  %13 = alloca i32, align 4
  %14 = alloca i8, align 1
  %15 = alloca float*, align 8
  %16 = alloca float, align 4
  %17 = alloca float, align 4
  %18 = alloca float, align 4
  %19 = alloca float, align 4
  %20 = alloca float, align 4
  %21 = alloca float, align 4
  %22 = alloca float, align 4
  %23 = alloca float, align 4
  %24 = alloca i32, align 4
  %25 = alloca float, align 4
  %26 = alloca float, align 4
  %27 = alloca i32, align 4
  store float* %0, float** %8, align 8
  store float %1, float* %9, align 4
  store float %2, float* %10, align 4
  store float %3, float* %11, align 4
  store float %4, float* %12, align 4
  store i32 %5, i32* %13, align 4
  store i8 %6, i8* %14, align 1
  %28 = load float*, float** %8, align 8
  store float* %28, float** %15, align 8
  store float 6.250000e-02, float* %16, align 4
  %29 = load float, float* %16, align 4
  %30 = fdiv float %29, 5.000000e+00
  store float %30, float* %17, align 4
  %31 = load float, float* %16, align 4
  %32 = fpext float %31 to double
  %33 = fdiv double %32, 2.500000e+00
  %34 = fptrunc double %33 to float
  store float %34, float* %18, align 4
  %35 = load float, float* %17, align 4
  store float %35, float* %19, align 4
  %36 = load float, float* %18, align 4
  store float %36, float* %20, align 4
  %37 = load float, float* %16, align 4
  %38 = load float, float* %17, align 4
  %39 = fsub float %37, %38
  store float %39, float* %21, align 4
  %40 = load float, float* %16, align 4
  %41 = fmul float %40, 2.000000e+00
  %42 = load float, float* %18, align 4
  %43 = fsub float %41, %42
  store float %43, float* %22, align 4
  store float 5.000000e-01, float* %23, align 4
  %44 = load i8, i8* %14, align 1
  %45 = sext i8 %44 to i32
  %46 = sub nsw i32 %45, 32
  store i32 %46, i32* %24, align 4
  %47 = load i32, i32* %24, align 4
  %48 = srem i32 %47, 16
  %49 = sitofp i32 %48 to float
  %50 = load float, float* %16, align 4
  %51 = fmul float %49, %50
  store float %51, float* %25, align 4
  %52 = load i32, i32* %24, align 4
  %53 = sdiv i32 %52, 16
  %54 = add nsw i32 %53, 1
  %55 = sitofp i32 %54 to float
  %56 = load float, float* %16, align 4
  %57 = fmul float %55, %56
  %58 = fmul float %57, 2.000000e+00
  %59 = fsub float 1.000000e+00, %58
  store float %59, float* %26, align 4
  %60 = load float, float* %23, align 4
  %61 = load i32, i32* %13, align 4
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds [8 x [3 x float]], [8 x [3 x float]]* @make_character_3d.offsets, i64 0, i64 %62
  %64 = getelementptr inbounds [3 x float], [3 x float]* %63, i64 0, i64 0
  %65 = load float, float* %64, align 4
  %66 = fmul float %60, %65
  %67 = load float, float* %9, align 4
  %68 = fadd float %67, %66
  store float %68, float* %9, align 4
  %69 = load float, float* %23, align 4
  %70 = load i32, i32* %13, align 4
  %71 = sext i32 %70 to i64
  %72 = getelementptr inbounds [8 x [3 x float]], [8 x [3 x float]]* @make_character_3d.offsets, i64 0, i64 %71
  %73 = getelementptr inbounds [3 x float], [3 x float]* %72, i64 0, i64 1
  %74 = load float, float* %73, align 4
  %75 = fmul float %69, %74
  %76 = load float, float* %10, align 4
  %77 = fadd float %76, %75
  store float %77, float* %10, align 4
  %78 = load float, float* %23, align 4
  %79 = load i32, i32* %13, align 4
  %80 = sext i32 %79 to i64
  %81 = getelementptr inbounds [8 x [3 x float]], [8 x [3 x float]]* @make_character_3d.offsets, i64 0, i64 %80
  %82 = getelementptr inbounds [3 x float], [3 x float]* %81, i64 0, i64 2
  %83 = load float, float* %82, align 4
  %84 = fmul float %78, %83
  %85 = load float, float* %11, align 4
  %86 = fadd float %85, %84
  store float %86, float* %11, align 4
  store i32 0, i32* %27, align 4
  br label %87

87:                                               ; preds = %171, %7
  %88 = load i32, i32* %27, align 4
  %89 = icmp slt i32 %88, 6
  br i1 %89, label %90, label %174

90:                                               ; preds = %87
  %91 = load float, float* %9, align 4
  %92 = load float, float* %12, align 4
  %93 = load i32, i32* %13, align 4
  %94 = sext i32 %93 to i64
  %95 = getelementptr inbounds [8 x [6 x [3 x float]]], [8 x [6 x [3 x float]]]* @make_character_3d.positions, i64 0, i64 %94
  %96 = load i32, i32* %27, align 4
  %97 = sext i32 %96 to i64
  %98 = getelementptr inbounds [6 x [3 x float]], [6 x [3 x float]]* %95, i64 0, i64 %97
  %99 = getelementptr inbounds [3 x float], [3 x float]* %98, i64 0, i64 0
  %100 = load float, float* %99, align 4
  %101 = fmul float %92, %100
  %102 = fadd float %91, %101
  %103 = load float*, float** %15, align 8
  %104 = getelementptr inbounds float, float* %103, i32 1
  store float* %104, float** %15, align 8
  store float %102, float* %103, align 4
  %105 = load float, float* %10, align 4
  %106 = load float, float* %12, align 4
  %107 = load i32, i32* %13, align 4
  %108 = sext i32 %107 to i64
  %109 = getelementptr inbounds [8 x [6 x [3 x float]]], [8 x [6 x [3 x float]]]* @make_character_3d.positions, i64 0, i64 %108
  %110 = load i32, i32* %27, align 4
  %111 = sext i32 %110 to i64
  %112 = getelementptr inbounds [6 x [3 x float]], [6 x [3 x float]]* %109, i64 0, i64 %111
  %113 = getelementptr inbounds [3 x float], [3 x float]* %112, i64 0, i64 1
  %114 = load float, float* %113, align 4
  %115 = fmul float %106, %114
  %116 = fadd float %105, %115
  %117 = load float*, float** %15, align 8
  %118 = getelementptr inbounds float, float* %117, i32 1
  store float* %118, float** %15, align 8
  store float %116, float* %117, align 4
  %119 = load float, float* %11, align 4
  %120 = load float, float* %12, align 4
  %121 = load i32, i32* %13, align 4
  %122 = sext i32 %121 to i64
  %123 = getelementptr inbounds [8 x [6 x [3 x float]]], [8 x [6 x [3 x float]]]* @make_character_3d.positions, i64 0, i64 %122
  %124 = load i32, i32* %27, align 4
  %125 = sext i32 %124 to i64
  %126 = getelementptr inbounds [6 x [3 x float]], [6 x [3 x float]]* %123, i64 0, i64 %125
  %127 = getelementptr inbounds [3 x float], [3 x float]* %126, i64 0, i64 2
  %128 = load float, float* %127, align 4
  %129 = fmul float %120, %128
  %130 = fadd float %119, %129
  %131 = load float*, float** %15, align 8
  %132 = getelementptr inbounds float, float* %131, i32 1
  store float* %132, float** %15, align 8
  store float %130, float* %131, align 4
  %133 = load float, float* %25, align 4
  %134 = load i32, i32* %13, align 4
  %135 = sext i32 %134 to i64
  %136 = getelementptr inbounds [8 x [6 x [2 x float]]], [8 x [6 x [2 x float]]]* @make_character_3d.uvs, i64 0, i64 %135
  %137 = load i32, i32* %27, align 4
  %138 = sext i32 %137 to i64
  %139 = getelementptr inbounds [6 x [2 x float]], [6 x [2 x float]]* %136, i64 0, i64 %138
  %140 = getelementptr inbounds [2 x float], [2 x float]* %139, i64 0, i64 0
  %141 = load float, float* %140, align 8
  %142 = fcmp une float %141, 0.000000e+00
  br i1 %142, label %143, label %145

143:                                              ; preds = %90
  %144 = load float, float* %21, align 4
  br label %147

145:                                              ; preds = %90
  %146 = load float, float* %19, align 4
  br label %147

147:                                              ; preds = %145, %143
  %148 = phi float [ %144, %143 ], [ %146, %145 ]
  %149 = fadd float %133, %148
  %150 = load float*, float** %15, align 8
  %151 = getelementptr inbounds float, float* %150, i32 1
  store float* %151, float** %15, align 8
  store float %149, float* %150, align 4
  %152 = load float, float* %26, align 4
  %153 = load i32, i32* %13, align 4
  %154 = sext i32 %153 to i64
  %155 = getelementptr inbounds [8 x [6 x [2 x float]]], [8 x [6 x [2 x float]]]* @make_character_3d.uvs, i64 0, i64 %154
  %156 = load i32, i32* %27, align 4
  %157 = sext i32 %156 to i64
  %158 = getelementptr inbounds [6 x [2 x float]], [6 x [2 x float]]* %155, i64 0, i64 %157
  %159 = getelementptr inbounds [2 x float], [2 x float]* %158, i64 0, i64 1
  %160 = load float, float* %159, align 4
  %161 = fcmp une float %160, 0.000000e+00
  br i1 %161, label %162, label %164

162:                                              ; preds = %147
  %163 = load float, float* %22, align 4
  br label %166

164:                                              ; preds = %147
  %165 = load float, float* %20, align 4
  br label %166

166:                                              ; preds = %164, %162
  %167 = phi float [ %163, %162 ], [ %165, %164 ]
  %168 = fadd float %152, %167
  %169 = load float*, float** %15, align 8
  %170 = getelementptr inbounds float, float* %169, i32 1
  store float* %170, float** %15, align 8
  store float %168, float* %169, align 4
  br label %171

171:                                              ; preds = %166
  %172 = load i32, i32* %27, align 4
  %173 = add nsw i32 %172, 1
  store i32 %173, i32* %27, align 4
  br label %87

174:                                              ; preds = %87
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
